# Agent-Constitution

./: .gitignore  LICENSE  ORCHESTRATOR_LOG.md  README.md  pyproject.toml  sample_constitution.yaml
agent_constitution/: __init__.py  audit.py  cli.py  constitution.py  enforcer.py
agent_constitution/dashboard/: __init__.py  server.py
agent_constitution/dashboard/frontend/: tailwind.config.js
agent_constitution/dashboard/frontend/src/: App.jsx  index.css
agent_constitution/rules/: __init__.py  evaluator.py  pii_detector.py
example/: __init__.py  demo.py
plans/: plan.md
tests/: __init__.py  test_audit.py  test_enforcer.py  test_evaluator.py  test_pii_detector.py
